agrego brecha de precios

--- a/analisis/neuquen.Rmd
+++ b/analisis/neuquen.Rmd
@@ -7,11 +7,29 @@ output: html_notebook
 ```{r}
 library(readxl)
 library(dplyr)
+library(lubridate)
+library(tidyverse)
 
 conversor_m3bbl_p <- function(x) {x / 6.2898}
 conversor_m3bbl_q <- function(x) {x * 6.2898}
+conversor_m3MMBTU_p <- function(x){x / 0.0353}
 
-produccion_provincia <- read_excel("C:/Archivos/repos/hidrocarburos/analisis/data/produccion_provincia.xlsx", 
+```
+
+```{r}
+tc_bna <- read.csv("data/tcp/tc_bna.csv", sep=";") %>% 
+  mutate(fecha = as.Date(Fecha.cotizacion, "%d/%m/%Y" ) ,
+         anio = year(fecha),
+         mes = month(fecha) ,
+         compra = as.double(str_replace(Compra, ",", ".")),
+         venta = as.double(str_replace(Venta, ",", "."))) %>% 
+  select(fecha, anio, mes, compra, venta)
+```
+
+
+# Producción y precios del crudo
+```{r}
+produccion_provincia <- read_excel("data/regalias/produccion_provincia_crudo.xlsx" , 
     skip = 10) %>%
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "m3",         
@@ -25,7 +43,7 @@ produccion_provincia <- read_excel("C:/Archivos/repos/hidrocarburos/analisis/dat
   mutate(unidad = "barriles")
 produccion_provincia
 
-precio_tipo_crudo <- read_excel("data/precio_tipo_crudo.xlsx", skip = 12) %>% 
+precio_tipo_crudo <- read_excel("data/regalias/precio_tipo_crudo.xlsx", skip = 12) %>% 
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "USD/m3",
          variable = "Precio Mercado Interno del Crudo ",
@@ -39,7 +57,7 @@ precio_tipo_crudo <- read_excel("data/precio_tipo_crudo.xlsx", skip = 12) %>%
 precio_tipo_crudo
 
 
-precio_provincia <- read_excel("data/precio_provincia.xlsx", skip = 12) %>% 
+precio_provincia <- read_excel("data/regalias/precio_provincia_crudo.xlsx", skip = 12) %>% 
   rename(anio = "AÑO", mes = "MES") %>% 
   mutate(unidad = "USD/m3",
          variable = "Precio Mercado Interno del Crudo ",
@@ -51,10 +69,54 @@ precio_provincia <- read_excel("data/precio_provincia.xlsx", skip = 12) %>%
   ungroup() %>% 
   mutate(unidad = "USD/barriles")
 precio_provincia
+```
 
+# Producción y precios del gas
+```{r}
+precio_interno_gas <- read_excel("data/regalias/precio_provincia_gas.xlsx", skip = 12) %>% 
+  rename(anio = "AÑO", mes = "MES") %>% 
+  mutate(unidad = "ARS/Mm3",
+         variable = "Precio Mercado Interno del gas",
+         anio =zoo::na.locf(anio),
+         fecha = as.Date(parse_date_time(paste0(anio, mes), orders = "ym"))) %>%
+  gather(key = provincia, value = precio_interno, 3:13) %>% 
+  filter(precio_interno > 0 & provincia == "NEUQUEN") %>% 
+  left_join(tc_bna %>% 
+              group_by(anio, mes) %>% 
+              summarise(tcn_vendedor = mean(venta, na.rm=T)) %>% 
+              ungroup(), by = c("anio", "mes")) %>% 
+  mutate(precio_interno = conversor_m3MMBTU_p((precio_interno/1000)/tcn_vendedor),
+         unidad = "USD/MMBTU") %>% 
+  na.omit()
+precio_interno_gas
+```
+
+
+```{r}
+#precio internacional
+precio_internacional_gas <- read_excel("resultados/argentina/variables.xlsx", 
+    sheet =  "precio_externo_gas") %>% 
+  filter(anio >=2003 ) %>%
+  mutate(unidad = "USD/MMBTU") %>% 
+  gather(key = precio_internacional, value = valor_precio_internacional, 3:ncol(.))
+precio_internacional_gas
+```
+
+
+```{r}
+brecha_gas <- precio_interno_gas %>% 
+  left_join(precio_internacional_gas, by = c("anio", "unidad")) %>% 
+  mutate(brecha_interno_externo = precio_interno/valor_precio_internacional - 1,
+         brecha_interno_externo_porcentaje = scales::label_percent()(brecha_interno_externo))
+brecha_gas
+```
+
+
+```{r}
 writexl::write_xlsx(x = list("produccion_provincia" = produccion_provincia, 
                             "precio_provincia"  = precio_provincia, 
-                            "precio_tipo_crudo" =precio_tipo_crudo),
+                            "precio_tipo_crudo" =precio_tipo_crudo, 
+                            "brecha_interno_externo" = brecha_gas),
                       path = "resultados/neuquen/produccion_y_precios_x_provincia (Base Regalias).xlsx")
 
 ```
